--- a/Training256.ipynb
+++ b/Training256.ipynb
@@ -2,33 +2,33 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Kết nối với Google Drive**"
-      ],
       "metadata": {
         "id": "TKwky2P0uwE8"
-      }
+      },
+      "source": [
+        "# **Kết nối với Google Drive**"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive', force_remount=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "zUGKbGUruueZ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive', force_remount=True)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Khai báo thư viên**"
-      ],
       "metadata": {
         "id": "atGURpBsuvPh"
-      }
+      },
+      "source": [
+        "# **Khai báo thư viên**"
+      ]
     },
     {
       "cell_type": "code",
@@ -58,35 +58,35 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "H8-D7HiVu_-E"
+      },
       "source": [
         "# **Cài đặt thư viện GDown, download và giải nén file data được update lên Google Drive**\n",
         "Link Google Drive: https://drive.google.com/uc?id=1Ww5Uu9wC2ySTUYFaKEOjUUjm9zI7-zHA"
-      ],
-      "metadata": {
-        "id": "H8-D7HiVu_-E"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xV4P94_tE2P4"
+      },
+      "outputs": [],
       "source": [
         "!pip install gdown\n",
         "!gdown https://drive.google.com/uc?id=1Ww5Uu9wC2ySTUYFaKEOjUUjm9zI7-zHA\n",
         "!unzip Data_256.zip"
-      ],
-      "metadata": {
-        "id": "xV4P94_tE2P4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Hàm dừng training khi đạt độ chính xác yêu cầu**"
-      ],
       "metadata": {
         "id": "Z8YDe9VEvAgQ"
-      }
+      },
+      "source": [
+        "# **Hàm dừng training khi đạt độ chính xác yêu cầu**"
+      ]
     },
     {
       "cell_type": "code",
@@ -106,15 +106,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Load data**"
-      ],
       "metadata": {
         "id": "VCVT5aQBvOJT"
-      }
+      },
+      "source": [
+        "# **Load data**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FpgXSpnWZqhs"
+      },
+      "outputs": [],
       "source": [
         "size = 256\n",
         "x = []\n",
@@ -137,21 +142,16 @@
         "y_test = np_utils.to_categorical(y_test,16)\n",
         "x = []\n",
         "y = []"
-      ],
-      "metadata": {
-        "id": "FpgXSpnWZqhs"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Khai báo các lớp của Model CNN**"
-      ],
       "metadata": {
         "id": "4fUm3xj0vOhg"
-      }
+      },
+      "source": [
+        "# **Khai báo các lớp của Model CNN**"
+      ]
     },
     {
       "cell_type": "code",
@@ -181,25 +181,21 @@
         "model.add(Conv2D(filters = 32, kernel_size=(3,3), strides = 1, padding = \"same\",activation=\"relu\"))\n",
         "model.add(AveragePooling2D(pool_size = (2,2), strides = 2))\n",
         "\n",
-        "\n",
         "model.add(Flatten())\n",
         "model.add(Dense(32, activation = 'relu'))\n",
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(16, activation = 'softmax'))\n",
-        "model.summary()\n",
-        "opt = Adam(learning_rate=0.0008)\n",
-        "model.compile(optimizer = opt, loss = 'categorical_crossentropy', metrics=['accuracy'])\n",
-        "history = model.fit(x_train, y_train, epochs = 1000, batch_size = 32, validation_data = (x_val, y_val), callbacks=[e_callback])"
+        "model.summary()"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Tiến hành training Model**"
-      ],
       "metadata": {
         "id": "nIbF1lnWvxxZ"
-      }
+      },
+      "source": [
+        "# **Tiến hành training Model**"
+      ]
     },
     {
       "cell_type": "code",
@@ -216,27 +212,27 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Lưu file Model vào Google Drive**"
-      ],
       "metadata": {
         "id": "Ffp9bm_uv2zx"
-      }
+      },
+      "source": [
+        "# **Lưu file Model vào Google Drive**"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xQ_WHCytFcKT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "xQ_WHCytFcKT",
         "outputId": "51aba8f6-9b28-46da-ca6e-050c83a66e38"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saved model to disk\n"
           ]
@@ -252,12 +248,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Xuất đồ thị độ chính xác**"
-      ],
       "metadata": {
         "id": "L8zWbwTVv3YE"
-      }
+      },
+      "source": [
+        "# **Xuất đồ thị độ chính xác**"
+      ]
     },
     {
       "cell_type": "code",
@@ -282,12 +278,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Xuất đồ thị độ mất mát**"
-      ],
       "metadata": {
         "id": "osjDPcmFv3tb"
-      }
+      },
+      "source": [
+        "# **Xuất đồ thị độ mất mát**"
+      ]
     },
     {
       "cell_type": "code",
@@ -312,12 +308,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Load Model đã save từ Google Drive**"
-      ],
       "metadata": {
         "id": "8nkzDYu1wSHy"
-      }
+      },
+      "source": [
+        "# **Load Model đã save từ Google Drive**"
+      ]
     },
     {
       "cell_type": "code",
@@ -337,12 +333,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Test độ chính xác của Model với dữ liệu không được đưa vào Training và Validation**"
-      ],
       "metadata": {
         "id": "6nZtPfjdwRrC"
-      }
+      },
+      "source": [
+        "# **Test độ chính xác của Model với dữ liệu không được đưa vào Training và Validation**"
+      ]
     },
     {
       "cell_type": "code",
@@ -359,15 +355,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# **Confution Matrix**"
-      ],
       "metadata": {
         "id": "sg5QM-pzjs0T"
-      }
+      },
+      "source": [
+        "# **Confution Matrix**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0G1Gkz3QB7aK"
+      },
+      "outputs": [],
       "source": [
         "labels = [\"Anh đào\",\"Bạch đằng\",\"Bồ đề\",\"Căm xe\",\"Cao su\",\"Cate\",\"Hoàng đàn\",\"Keo lai\",\"Lát hoa\",\"Mỡ \",\"Mun\",\"Muồng đen\",\"Quế\",\"Sồi\",\"Táu mật\",\"Không phải gỗ\"]\n",
         "y_pred = model.predict(x_test)\n",
@@ -383,12 +384,7 @@
         "plt.xlabel(\"Predict\",fontsize=16)\n",
         "plt.ylabel(\"Actual\",fontsize=16)\n",
         "plt.savefig('/content/drive/MyDrive/Confution_matrix.jpg', dpi = 160)"
-      ],
-      "metadata": {
-        "id": "0G1Gkz3QB7aK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
